changed zoom level on homeBase map url, removed host parameter to stop other requests from breaking, centered overflow text on zipFilter.

--- a/src/components/ZipcodeFilter/ZipcodeFilter.css
+++ b/src/components/ZipcodeFilter/ZipcodeFilter.css
@@ -46,6 +46,7 @@
 
   .filtered-list-item p {
     margin: 0px;
+    text-align: center;
   }
   
   .results-header {
